@@ -1,9 +1,9 @@
 Package: car
 Version: 2.0-13
-Date: 2012/03/07
+Date: 2012/03/12
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
-	person("Sanford", "Weisberg", role = "aut", email = "sandy@stat.umn.edu"),
+	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
     person("Douglas", "Bates", role = "ctb"),
     person("David", "Firth", role = "ctb"),
     person("Michael", "Friendly", role = "ctb"),
